force-app/main/default/objects/User/fields/AV_ID__c.field-meta.xml
<CustomField>
    <fullName>AV_ID__c</fullName>
    <label>AV ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>