force-app/main/default/objects/User/fields/Designation_Level__c.field-meta.xml
<CustomField>
    <fullName>Designation_Level__c</fullName>
    <label>Designation/Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Business Head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>