force-app/main/default/objects/User/fields/Insurer_Specific_SP_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Specific_SP_ID__c</fullName>
    <label>Insurer Specific SP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>