force-app/main/default/objects/User/fields/Product_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Product_Expertise__c</fullName>
    <label>Product Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Term Life Insurance</fullName>
            </value>
            <value>
                <fullName>Savings Plan Insurance</fullName>
            </value>
            <value>
                <fullName>Motor Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>