force-app/main/default/objects/User/fields/TFS_ID__c.field-meta.xml
<CustomField>
    <fullName>TFS_ID__c</fullName>
    <label>TFS ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>